--- a/Ej1PAE/app/src/main/AndroidManifest.xml
+++ b/Ej1PAE/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:theme="@style/Theme.Ej1PAE"
         tools:targetApi="31">
         <activity
+            android:name=".DB"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".Login"
             android:exported="true">
             <intent-filter>
