--- a/Ej1PAE/app/src/main/AndroidManifest.xml
+++ b/Ej1PAE/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Ej1PAE"
         tools:targetApi="31">
+
         <activity
             android:name=".DB"
             android:exported="false">
@@ -19,6 +20,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
         <activity
             android:name=".Login"
             android:exported="true">
@@ -32,6 +34,15 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity
+            android:name=".CrearUsuarios"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
     </application>
 
 </manifest>
