Arreglados problemas al iniciar la clase de crear jugadores e implementados ViewBinding para un codigo mas limpito.

--- a/Ej1PAE/app/src/main/AndroidManifest.xml
+++ b/Ej1PAE/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
 
         <activity
-            android:name=".CrearUsuarios"
+            android:name=".CrearJugador"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
