--- a/Ej1PAE/app/src/main/AndroidManifest.xml
+++ b/Ej1PAE/app/src/main/AndroidManifest.xml
@@ -43,6 +43,14 @@
                 android:value="" />
         </activity>
 
+        <activity
+            android:name=".EditarJugador"
+            android:exported="true">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+
     </application>
 
 </manifest>
